--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
       </ul>
     </div>
   </nav>
@@ -69,23 +66,18 @@
           Pratama
         </h1>
         <div class="subheading mb-5">Marga Bakti Street · Purwokerto, 53141 · 08782218**** ·
-          <a href="mailto:bagussp99@gmail.com">bagussp99@gmail.com</a>
+          <a href="mailto:bagussp99@gmail.com">bagussp26@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high
-          level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the
-          overall value proposition.</p>
+        <p class="lead mb-5">Saya Bagus Satria Pratama dan usia saya saat ini 21 tahun. Saya memiliki kondisi kesehatan yang sangat baik. Saya orangnya pekerja keras, mampu mengelaborasi fakta dengan baik, kreatif, mudah bersosialisasi, bersemangat, mau belajar, petualang dan humoris. Hobi saya bersepeda , menonton film, traveling dan camping.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/bagussp26">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/bagussp99">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
+          <a href="https://www.instagram.com/bagussp26">
+            <i class="fab fa-instagram"></i>
           </a>
         </div>
       </div>
@@ -99,57 +91,14 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day,
-              going forward, a new normal that has evolved from generation X is on the runway heading towards a
-              streamlined cloud solution. User generated content in real-time will have multiple touchpoints for
-              offshoring.</p>
+            <h3 class="mb-0">IT Support</h3>
+            <div>Internship</div>
+            <div class="subheading mb-3">IT PT.KAI DAOP 5 PURWOKERTO</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">FEBUARI 2016 – APRIL 2016</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the
-              digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information
-              highway will close the loop on focusing solely on the bottom line.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless
-              key performance indicators offline to maximise the long tail. Keeping your eye on the ball while
-              performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C
-              users after installed base benefits. Dramatically visualize customer directed convergence without
-              revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
-          </div>
-        </div>
-
       </div>
 
     </section>
@@ -162,24 +111,21 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Institut Teknologi Telkom Purwokerto</h3>
+            <div class="subheading mb-3">Teknik Informatika</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">Oktober 2017 - Sekarang</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">SMK Kesatrian Purwokerto</h3>
+            <div class="subheading mb-3">Teknik Komputer Jaringan</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">Juli 2013 - Juli 2017</span>
           </div>
         </div>
 
@@ -201,34 +147,34 @@
             <i class="fab fa-css3-alt"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
+            <i class="fab fa-php"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+            <i class="fab fa-java"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+            <i class="fas fa-database"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
+            <i class="fab fa-blogger"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
+            <i class="fas fa-copyright"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-less"></i>
+            <i class="fab fa-laravel"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
+            <i class="fab fa-internet-explorer"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
+            <i class="fas fa-camera"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
+            <i class="fas fa-video"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
+            <i class="fab fa-android"></i>
           </li>
         </ul>
 
@@ -246,6 +192,9 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Agile Development &amp; Scrum</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Computer Network</li>
         </ul>
       </div>
     </section>
@@ -255,50 +204,12 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
       <div class="my-auto">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier
-          and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing,
-          and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows,
-          I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology
-          advancements in the front-end web development world.</p>
+        <p>Selain sebagai Web Developer saya juga terterik pada Computer Network, IoT, Fotografi dan Video grafi.</p>
+        <p class="mb-0"> Saya menikmati sebagian besar waktu saya di luar rumah. Di musim panas, saya menikmati bersepeda, bepergian, berkemah. Ketika dipaksa di dalam ruangan, saya menoton sejumlah film aksi, komedi dan animasi, saya menghabiskan banyak waktu luang saya menjelajahi kemajuan teknologi terbaru di dunia dan belajar hal baru.</p>
       </div>
     </section>
 
     <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-      <div class="my-auto">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
-        </ul>
-      </div>
-    </section>
 
   </div>
 
